src/components/productscard/productscard.scss
.product-card-container {
  width: 100%;
  display: flex;
  flex-direction: column;
  height: 343px;
  align-items: center;
  position: relative;

  img {
    width: 100%;
    height: 95%;
    object-fit: cover;
    margin-bottom: 5px;
  }
   
  .btn-cnt {
    width: 100%;
    opacity: 0.7;
    position: absolute;
    top: 265px; 
    display: none;
  }

  &:hover {
    img {
      opacity: 0.8;
      transform: scale(1.03);
      transition: transform 2s cubic-bezier(0.25, 0.45, 0.45, 0.95);
    }

    .btn-cnt {
      opacity: 0.85;
      display: flex;
    }
  }

  .footer {
    width: 100%;
    height: 5%;
    display: flex;
    justify-content: space-between;
    font-size: 18px;

    .name {
      width: 90%;
      margin-bottom: 15px;
    }

    .price {
      padding-left: auto;
      width: 45%;
    }
  }
}
 .rating{
  margin-top: 18px;
  margin-right: auto;
  font-size: 16px;
  top: 380px;
 }

